# azure_snapshotter

./: .gitignore  README.md  setup.cfg  setup.py
azure_snapshotter/: snapshotter.py
tests/: test_metatable.py
