[metadata]
name = azure-snapshotter
description = Backup directories to azure blobs
long_description = file: README.md
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.6, <4,
setup_requires =
    setuptools_scm
install_requires =
    azure-storage-blob
    click
    storefact
    pycryptodome

[options.entry_points]
console_scripts =
    snapshotter = azure_snapshotter.snapshotter:main

[options.extras_require]
dev =
    flake8
    isort
    pytest

[tool:pytest]
addopts =
    --verbose
    -ra
log_cli = False
junit_family = xunit2
testpaths = tests

[tool:isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
known_first_party = azure-snapshotter
length_sort = true
skip =
    azure_snapshotter/__init__.py
skip_glob =
    venv
    .venv
    .eggs
    .git
    build
    dist
default_section = THIRDPARTY

[flake8]
ignore = E203, E266, E501, W503, C901
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .eggs